--- a/install_tools.yml
+++ b/install_tools.yml
@@ -1,69 +1,87 @@
-- name: Install tools on the local machine
+---
+- name: Install software on the local machine
   hosts: localhost
-  become: true
   gather_facts: true
+  become: yes
+
   tasks:
+    - name: Update package manager cache
+      apt:
+        update_cache: yes
+      when: ansible_pkg_mgr == 'apt'
+
+    - name: Install prerequisite packages
+      apt:
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+        state: present
+      when: ansible_pkg_mgr == 'apt'
+
+    - name: Add Jenkins GPG key
+      apt_key:
+        url: https://pkg.jenkins.io/debian/jenkins.io.key
+        state: present
+      when: ansible_pkg_mgr == 'apt'
+
+    - name: Add Jenkins repository
+      apt_repository:
+        repo: deb https://pkg.jenkins.io/debian-stable binary/
+      when: ansible_pkg_mgr == 'apt'
+
     - name: Install Jenkins
-      yum:
+      apt:
         name: jenkins
         state: present
+      when: ansible_pkg_mgr == 'apt'
 
-    - name: Enable Jenkins service
+    - name: Start Jenkins service
       service:
         name: jenkins
-        enabled: yes
         state: started
+        enabled: yes
+      when: ansible_pkg_mgr == 'apt'
 
-    - name: Add jenkins user to the docker group
+    - name: Install Maven
+      apt:
+        name: maven
+        state: present
+      when: ansible_pkg_mgr == 'apt'
+
+    - name: Install Docker
+      apt:
+        name:
+          - docker.io
+          - docker-compose
+        state: present
+      when: ansible_pkg_mgr == 'apt'
+
+    - name: Add current user to Docker group
       user:
-        name: jenkins
+        name: "{{ ansible_user }}"
         groups: docker
         append: yes
 
-    - name: Install Docker
-      yum:
-        name: docker
-        state: present
-
-    - name: Start Docker service
-      service:
-        name: docker
-        state: started
-        enabled: yes
-
-    - name: Install Docker Compose
-      get_url:
-        url: https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-linux-x86_64
-        dest: /usr/local/bin/docker-compose
-        mode: 0755
-
-    - name: Create symbolic link for Docker Compose
-      file:
-        src: /usr/local/bin/docker-compose
-        dest: /usr/bin/docker-compose
-        state: link
-
-    - name: Update system packages
-      yum:
-        name: '*'
-        state: latest
-
-    - name: Install Maven
-      yum:
-        name: maven
-        state: present
-
     - name: Install kubectl
-      shell: |
-        curl --silent --location -o /usr/local/bin/kubectl \
-        "https://dl.k8s.io/release/$(curl --silent --location https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-        chmod +x /usr/local/bin/kubectl
+      shell: curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
+      args:
+        creates: /usr/local/bin/kubectl
+
+    - name: Install Git
+      apt:
+        name: git
+        state: present
+      when: ansible_pkg_mgr == 'apt'
 
     - name: Install eksctl
-      shell: |
-        curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
-        mv /tmp/eksctl /usr/local/bin
+      shell: curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp && sudo mv /tmp/eksctl /usr/local/bin
+      args:
+        creates: /usr/local/bin/eksctl
 
-    - name: Display initial admin password for Jenkins
-      command: cat /var/lib/jenkins/secrets/initialAdminPassword
-      register: jenkins_password
+    - name: Upgrade AWS CLI to version 2
+      shell: curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && sudo ./aws/install
+      args:
+        chdir: /tmp
+        creates: /usr/local/bin/aws
