--- a/install_tools.yml
+++ b/install_tools.yml
@@ -60,7 +60,7 @@
 
     - name: Add current user to Docker group
       user:
-        name: "{{ ansible_user }}"
+        name: "{{ ansible_env.USER }}"
         groups: docker
         append: yes
 
